--- a/InitialResearch.Rmd
+++ b/InitialResearch.Rmd
@@ -77,3 +77,4 @@ temp <- ingr[!duplicated(ingr$replaced),]
 temp <- temp[!(temp$replaced %in% commonIngredients), ]
 head(temp[order(-temp$count),], 20)
 ```
+Based on this, I will select the top 20 ingredients that are not in the commonIngredients list.
