--- a/InitialResearch.Rmd
+++ b/InitialResearch.Rmd
@@ -13,7 +13,7 @@ The ingredients map was originally downloaded in the .pkl format and converted t
 ```{r}
 ingr_filepath <- '/Users/sofyamalashchenko/Documents/Sofya/Uni\ stuff/Waterloo\ Winter\ 2022/Ingredient-detection/ingr_map.csv'
 ingr <- read.csv(ingr_filepath)
-head(ingr)
+head(ingr, 2)
 ```
 The plan is to look at most used ingredients and use those as the starting point for the data collection process. 
 
@@ -27,9 +27,7 @@ First, loading the recipe data from the same notebook and adding a column "NumIn
 ```{r}
 recipes_filepath <- '/Users/sofyamalashchenko/Documents/Sofya/Uni\ stuff/Waterloo\ Winter\ 2022/Ingredient-detection/PP_recipes.csv'
 recipes <- read.csv(recipes_filepath)
-```
-```{r}
-head(recipes)
+head(recipes, 2)
 ```
 First, convert the ingre
 dient_ids column into a list format
@@ -43,9 +41,7 @@ recipes$SepIngredients <- apply(recipes, 1, FUN = function(x)
                         quiet = TRUE)))
 # Then count the number of ingredients in each and add it to a new column
 recipes$NumIngredients <- apply(recipes, 1, FUN = function(x) length(x$SepIngredients))
-```
-```{r}
-head(recipes)
+head(recipes, 2)
 ```
 Now, getting the frequency histogram for the number of ingredients.
 ```{r}
@@ -63,7 +59,7 @@ boxplot(recipes$NumIngredients,
 From the two graphs above we see that most recipes have less than 15 ingredients and 20 ingredients is the max. Looking at the top 15 ingredients we see
 ```{r}
 temp <- ingr[!duplicated(ingr$replaced),]
-head(temp[order(-temp$count),], 15)
+head(temp[order(-temp$count),], 2)
 ```
 Investigating what 'flmy' is:
 ```{r}
@@ -105,18 +101,11 @@ commonIngredientsNum
 ```
 
 ```{r}
-check <- apply(head(recipes), 1, FUN = function(x)  length(setdiff(x$SepIngredients, commonIngredientsNum)))
-check
-```
-
-```{r}
 recipes$RemainingIngr <- apply(recipes, 1, FUN = function(x)
         setdiff(x$SepIngredients, commonIngredientsNum))
 recipes$RemainingIngrNum <- apply(recipes, 1, FUN = function(x)
         length(x$RemainingIngr))
-```
-```{r}
-head(recipes, 20)
+head(recipes)
 ```
 The results:
 ```{r}
