--- a/The model.ipynb
+++ b/The model.ipynb
@@ -13,7 +13,9 @@
    "source": [
     "We will start with creating an image classification model which we will later use to build an object detection model. At this stage we will use tensorflow.\n",
     "\n",
-    "Useful links:\n"
+    "Useful links:\n",
+    "https://www.tensorflow.org/tutorials/images/classification,\n",
+    "https://www.youtube.com/watch?v=qFJeN9V1ZsI&ab_channel=freeCodeCamp.org"
    ]
   },
   {
@@ -166,10 +168,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'BatchDataset' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [10]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mtype\u001b[39m(\u001b[43mval_ds\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'BatchDataset' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "type(val_ds)"
+   ]
   }
  ],
  "metadata": {
