--- a/The model.ipynb
+++ b/The model.ipynb
@@ -23,7 +23,10 @@
     "Use of tf.device was taken from https://developer.apple.com/forums/thread/695319\n",
     "Use the instructions in https://betterdatascience.com/install-tensorflow-2-7-on-macbook-pro-m1-pro/ to install tensorflow with m1.\n",
     "\n",
-    "This, for some reason didn't work: https://stackoverflow.com/questions/49652568/keras-trained-model-using-different-tf-device\n"
+    "This, for some reason didn't work: https://stackoverflow.com/questions/49652568/keras-trained-model-using-different-tf-device\n",
+    "\n",
+    "Funny thing, the CPU seems to be working faster than the GPU. The fix might be here:\n",
+    "https://developer.apple.com/forums/thread/696224\n"
    ]
   },
   {
@@ -578,7 +581,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "251/792 [========>.....................] - ETA: 6:21 - loss: 1.5446 - accuracy: 0.4493"
+      "529/792 [===================>..........] - ETA: 3:10 - loss: 1.2038 - accuracy: 0.5740"
      ]
     }
    ],
