The model seems to be overfitting

--- a/The model.ipynb
+++ b/The model.ipynb
@@ -607,6 +607,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is significant overfitting which can be seen from differences in accuracy and val_accuracy. To be honest, I am not sure yet how to f"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
