last edits for today

--- a/The model.ipynb
+++ b/The model.ipynb
@@ -767,7 +767,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This model is taking about 16 minutes per epoch and looking at the performance results, it is not doing as well as the previous one. Note: might "
+    "This model is taking about 16 minutes per epoch and looking at the performance results, it is not doing as well as the previous one. Note: might try again once I figure out how to run things on the GPU faster"
    ]
   },
   {
@@ -808,7 +808,7 @@
     "    inputs = keras.Input(shape=(img_height, img_width, 3))\n",
     "    with tf.device(\"/CPU:0\"):\n",
     "        x = layers.RandomContrast(factor=0.75)(inputs)\n",
-    "        x = layers.RandomRotation(factor=0.10)(x)\n",
+    "        x = layers.RandomRotastion(factor=0.10)(x)\n",
     "        x = layers.RandomTranslation(height_factor=0.2, width_factor=0.1)(x)\n",
     "    with tf.device(\"/GPU:0\"):\n",
     "    #First block\n",
